clean up and improve error logs
