# docs/openapi.json
@@ -3627,6 +3627,12 @@
             "items": {
               "$ref": "#/components/schemas/ResourceActionDto"
             }
+          },
+          "failureDetail": {
+            "type": [
+              "null",
+              "string"
+            ]
           }
         }
       },
